[tool.poetry]
name = "token-calculator"
version = "0.1.0"
description = "Calculate GPT Tokens with tiktoken"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tiktoken = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
count-tokens = "token_calculator.count_tokens:main"
